--- a/.travis.yml
+++ b/.travis.yml
@@ -34,12 +34,12 @@ jobs:
       - ./ci-scripts/build_docker_image.sh
 
     # Stage to deploy application
-    - stage: Deploy
-      services:
-        - docker
-      name: "Deploy to DO"
-      sudo: required
-    - script:
-      - export FILE_PATH="/home/travis/.docker/config.json"
-      - chmod +x ci-scripts/deployment.sh
-      - ./ci-scripts/deployment.sh
+    # - stage: Deploy
+    #   services:
+    #     - docker
+    #   name: "Deploy to DO"
+    #   sudo: required
+    # - script:
+    #   - export FILE_PATH="/home/travis/.docker/config.json"
+    #   - chmod +x ci-scripts/deployment.sh
+    #   - ./ci-scripts/deployment.sh
